Fixed glassdoor overflow box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ justify-content: center;
 }
 #jobDisplay {
 	height: 500px;
-
+	overflow: auto;
 }
 
 #eventDisplay {
